--- a/src/app/product-card-sale/product-card-sale.component.html
+++ b/src/app/product-card-sale/product-card-sale.component.html
@@ -1,1 +1,52 @@
-<p>product-card-sale works!</p>
+<div class=" p-6 shadow border rounded-xl  bg-white w-72">
+  <!--  image-->
+  <div class="relative h-64 sm:h-52">
+    <img class="object-cover w-full h-full rounded-lg" [src]="product.imgURl" alt="">
+    <div class="absolute top-0 left-0 bg-red-500 text-white px-2 py-1 rounded">
+      20% OFF
+    </div>
+  </div>
+  <!--  detail-->
+  <div>
+    <!--  product name -->
+    <div>
+      <p class="font-bold  text-lg">{{product.name}}</p>
+    </div>
+    <!--  product price -->
+    <div class="flex ">
+      <p class="text-sm mr-2 line-through	text-gray-400">$ {{product.price}} </p>
+      <p class="text-sm">$ {{product.price }} </p>
+
+    </div>
+    <!--  product sizes-->
+    <div class="flex space-x-3 my-4">
+      <!-- sizes-->
+      <div *ngFor="let sizes of product.sizes">
+        <div>
+          <label for="s" class="inline-flex items-center ">
+            <input type="radio" id="s" name="options" class="hidden"/>
+            <div
+              class="border border-orange-500 text-orange-500  py-0 px-2 rounded active:bg-orange-500 active:text-white">
+              {{sizes}}
+            </div>
+          </label>
+        </div>
+      </div>
+
+
+    </div>
+
+    <!--  product jobs-->
+    <div class="flex justify-between items-center">
+      <button class="bg-orange-500 text-white rounded-md py-2 px-4">Add To Cart</button>
+      <div class="h-8 w-8 rounded-full bg-orange-500 flex justify-center items-center text-white">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+             class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"/>
+        </svg>
+      </div>
+    </div>
+  </div>
+
+</div>
