Change the cart component general structure

--- a/src/app/cart/cart-detail/cart-detail.component.html
+++ b/src/app/cart/cart-detail/cart-detail.component.html
@@ -1,33 +1,33 @@
-<div class="flex flex-col sm:flex-row " >
- <div class="w-full md:w-4/5">
-   <div class="flex items-start justify-start">
-     <button class="px-4 py-2 rounded-md  text-black border-r-2 border-l-2 border-t-2">cart</button>
-     <button class="px-4 py-2 rounded-md bg-orange-500 text-white">favorate</button>
-   </div>
-   <div class="border-2 p-2">
-     <!--    remove button-->
-     <div class="flex justify-end">
-       <button class="px-3 py-2 rounded-md text-orange-500 border-orange-500 border flex justify-between gap-x-2">
-         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-           <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
-         </svg>
-         remove</button>
-     </div>
-     <!-- select all radio-->
-     <div class="flex justify-start">
-       <div class="w-6 h-6 flex flex-col justify-center items-center ">
-         <input type="checkbox" class="hidden" id="myCheckbox">
-         <label for="myCheckbox" class="w-5 h-5 bg-white rounded-md border border-black"></label>
-       </div>
-       <p class="pl-4">select all</p>
-     </div>
-     <div class="mt-10">
-       <app-cart-card></app-cart-card>
-       <app-cart-card></app-cart-card>
+<div class="flex flex-col sm:flex-row ">
+  <div class="w-full md:w-4/5">
 
-     </div>
-   </div>
- </div>
+    <div class="border-2 p-2">
+      <!--    remove button-->
+      <div class="flex justify-end">
+        <button class="px-3 py-2 rounded-md text-orange-500 border-orange-500 border flex justify-between gap-x-2">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+               stroke="currentColor" class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
+          </svg>
+          remove
+        </button>
+      </div>
+      <!-- select all radio-->
+      <div class="flex justify-start">
+        <div class="w-6 h-6 flex flex-col justify-center items-center ">
+          <input type="checkbox" class="hidden" id="myCheckbox">
+          <label for="myCheckbox" class="w-5 h-5 bg-white rounded-md border border-black"></label>
+        </div>
+        <p class="pl-4">select all</p>
+      </div>
+      <div class="mt-10">
+        <app-cart-card></app-cart-card>
+        <app-cart-card></app-cart-card>
+
+      </div>
+    </div>
+  </div>
   <div class="w-full md:w-1/5 sm:ml-4 mt-4 sm:mt-10">
     <app-cart-checkout></app-cart-checkout>
   </div>
