--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -16,29 +16,118 @@
     <!--  product sizes-->
     <div class="flex space-x-3 my-4">
       <!-- sizes-->
-     <div *ngFor="let sizes of product.sizes">
-       <div >
-         <label for="s" class="inline-flex items-center ">
-           <input type="radio" id="s" name="options" class="hidden" />
-           <div class="border border-orange-500 text-orange-500  py-0 px-2 rounded active:bg-orange-500 active:text-white">
-             {{sizes}}
-           </div>
-         </label>
-       </div>
-     </div>
+      <div *ngFor="let size of product.sizes">
+        <div>
+          <label [for]="'size-' + size + '-' + product.id" class="inline-flex items-center ">
+            <!--i have a problem in here and i fixed it with this [for] that i added the product id with the name -->
+            <input
+              [value]="size"
+              type="radio"
+              [id]="'size-' + size + '-' + product.id"
+              [name]="'options-' + product.id"
+              (click)="selectSize(size)"
+              [checked]="size === defaultSize"
+              class="hidden"/>
+            <div
+              [ngClass]="{'bg-orange-500': (size === defaultSize) , 'text-white': ( size === defaultSize )}"
+
+              class="border border-orange-500 text-orange-500  py-0 px-2 rounded active:bg-orange-500 active:text-white">
+              {{size}}
+            </div>
+          </label>
+        </div>
+      </div>
 
 
     </div>
 
     <!--  product jobs-->
     <div class="flex justify-between items-center">
-      <button class="bg-orange-500 text-white rounded-md py-2 px-4">Add To Cart</button>
+      <button (click)="show(product)" class="bg-orange-500 text-white rounded-md py-2 px-4">Add To Cart</button>
       <div class="h-8 w-8 rounded-full bg-orange-500 flex justify-center items-center text-white">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
+             class="w-6 h-6">
+          <path stroke-linecap="round" stroke-linejoin="round"
+                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"/>
         </svg>
+      </div>
+
+
+    </div>
+
+
+    <div *ngIf="showModal">
+      <div class="fixed inset-0 flex items-center justify-center">
+        <div class="absolute inset-0 bg-gray-300 opacity-75"></div>
+        <div class="bg-white p-8 rounded-lg z-10">
+          <div class="flex justify-end">
+            <button (click)="hide()">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                   stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+              </svg>
+
+            </button>
+          </div>
+          <div class="flex items-center flex-col p-8">
+            <!--detail-->
+            <div class="mb-3">
+              <p>product name : <span class=" font-bold">{{product.name}}</span></p>
+              <p>product price : <span class=" font-bold">{{product.price}}</span></p>
+              <p>total price : <span class=" font-bold">{{product.price * psc  }}</span></p>
+
+            </div>
+            <!--sizes-->
+            <div class="flex gap-2 mb-3">
+              <div *ngFor="let size of product.sizes">
+                <label [for]="'size-' + size + '-' + product.id" class="inline-flex items-center ">
+                  <!--i have a problem in here and i fixed it with this [for] that i added the product id with the name -->
+                  <input
+                    [value]="size"
+                    type="radio"
+                    [id]="'size-' + size + '-' + product.id"
+                    [name]="'options-' + product.id"
+                    (click)="selectSize(size)"
+                    [checked]="size === defaultSize"
+                    class="hidden"/>
+                  <div
+                    [ngClass]="{'bg-orange-500': (size === defaultSize) , 'text-white': ( size === defaultSize )}"
+
+                    class="border border-orange-500 text-orange-500  py-0 px-2 rounded active:bg-orange-500 active:text-white">
+                    {{size}}
+                  </div>
+                </label>
+              </div>
+            </div>
+            <!--psc-->
+            <div class="sm:flex sm:justify-center sm:items-center">
+              <div class="flex justify-between  ">
+                <div class="border border-orange-400  px-2 space-x-4 py-1 flex items-center justify-between  ">
+                  <button (click)="dec() " class="text-orange-500">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"/>
+                    </svg>
+                  </button>
+                  <p>{{psc}}</p>
+                  <button (click)="inc()" class="text-orange-500">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!--button-->
+            <button
+              (click)="addAndHide( )"
+              class="bg-orange-500 text-white rounded-md py-2 px-4 mt-4">
+              add
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
-
 </div>
