Add routerLink to navbar links

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,12 +2,16 @@
   <div class="flex justify-between px-10 py-4">
 
     <div class="sm:flex sm:justify-between sm:w-screen">
-      <p class="text-2xl font-bold"><a href="#">SHOPLY</a></p>
+      <p class="text-2xl font-bold"><a [routerLink]="['']">SHOPLY</a></p>
       <div [hidden]="close" class="sm:flex sm:justify-center sm:items-center sm:space-x-6 space-x-0 ">
         <ul class="sm:flex  sm:space-x-8 text-lg py-3 sm:py-0 ">
-          <li class="p-2  border-2 border-orange-200 my-2 sm:border-0 sm:my-0"><a href="#">Product</a></li>
-          <li class="p-2  border-2 border-orange-200 my-2 sm:border-0 sm:my-0"><a href="#">Sale</a></li>
-          <li class="p-2  border-2 border-orange-200 my-2 sm:border-0 sm:my-0"><a href="#">Cart</a></li>
+          <li class="p-2  border-2 border-orange-200 my-2 sm:border-0 sm:my-0"><a
+            [routerLink]="['products']">Product</a></li>
+          <li class="p-2  border-2 border-orange-200 my-2 sm:border-0 sm:my-0"><a
+            [routerLink]="['sale']">Sale</a></li>
+          <li class="p-2  border-2 border-orange-200 my-2 sm:border-0 sm:my-0"><a
+            [routerLink]="['/cart/myCart']">Cart</a>
+          </li>
         </ul>
         <div class=" sm:flex sm:flex-row sm:space-x-6 space-x-3 ">
           <input class="  px-3 py-1.5  w-44 rounded border-2 gap-2 font-semibold" placeholder="search" type="text">
