--- a/src/app/cart/cart-detail/cart-checkout/cart-checkout.component.html
+++ b/src/app/cart/cart-detail/cart-checkout/cart-checkout.component.html
@@ -7,12 +7,12 @@
   </div>
   <div class="flex justify-between  mb-6">
     <p class="text-2xl">grant total </p>
-    <p class="text-lg font-bold">100$</p>
+    <p class="text-lg font-bold">{{total}}</p>
   </div>
 
 
-   <div class="flex justify-center">
-     <button class="bg-orange-500 rounded-2xl text-white w-full p-4 text-2xl">checkout</button>
-   </div>
+  <div class="flex justify-center">
+    <button class="bg-orange-500 rounded-2xl text-white w-full p-4 text-2xl">checkout</button>
+  </div>
 
 </div>
