--- a/src/app/cart/cart-detail/cart-checkout/cart-checkout.component.html
+++ b/src/app/cart/cart-detail/cart-checkout/cart-checkout.component.html
@@ -1,13 +1,17 @@
 <div class="  p-8 flex flex-col shadow border rounded-md shadow-gray-50 ">
-  <div class="flex justify-between mb-10">
+  <div class="flex justify-between mb-2">
     <p class="text-lg">subtotal </p>
-    <p class="text-lg font-bold">200$</p>
+    <p class="text-lg font-bold">{{subtotal | number: '1.2-2'}}</p>
+  </div>
+  <div class="flex justify-between mb-10">
+    <p class="text-gray-500">tax</p>
+    <p class=" font-semibold text-gray-500">{{tax | number: '1.2-2'}}</p>
   </div>
   <div class="border-t-gray-400 border-t mb-6">
   </div>
   <div class="flex justify-between  mb-6">
     <p class="text-2xl">grant total </p>
-    <p class="text-lg font-bold">{{total}}</p>
+    <p class="text-lg font-bold">{{total | number: '1.2-2'}}</p>
   </div>
 
 
