Implement favourite card functionalities

--- a/src/app/cart/favorate-detail/favorate-card/favorate-card.component.html
+++ b/src/app/cart/favorate-detail/favorate-card/favorate-card.component.html
@@ -1,51 +1,119 @@
-<div class="border-t-gray-400 border-t">
+<div class="border-t-gray-400 border-t ">
   <div class="flex sm:flex-row">
-
-    <!--  checkbox-->
-    <div class="flex items-center justify-center">
-      <div class="w-6 h-6 flex flex-col justify-center items-center ">
-        <input class="hidden" id="myCheckbox" type="checkbox">
-        <label class="w-5 h-5 bg-white rounded-md border border-black" for="myCheckbox"></label>
+    <div class="sm:flex items-center justify-center hidden">
+      <div class="  sm:h-32 sm:w-32 m-2 ">
+        <img alt=""
+             class="object-cover w-full h-full  rounded-lg "
+             [src]="product.imgURl">
       </div>
-    </div>
-    <!--  image-->
-    <div class="flex items-center justify-center ">
-      <img alt="" class="h-24 sm:ml-8 sm:h-44" src="assets/images/teshirty.png">
     </div>
     <!--  other content -->
-    <div class="p-4 sm:flex sm:justify-between w-full md:w-4/5 sm:flex-row">
+    <div class="p-4 flex-col sm:flex sm:justify-between w-full md:w-4/5 sm:flex-row">
       <!--  name -->
-      <div class="mb-2" >
-        <p class="text-lg font-bold">Camisole</p>
-        <p class="text-gray-400">Small</p>
+      <div class="mb-2 flex items-center">
+        <p class="text-lg font-bold">{{product.name}}</p>
       </div>
-      <!--  price -->
-      <div class="mb-2 sm:flex sm:items-center sm:text-lg">
-        <p class="font-semibold">$ 8.00</p>
-      </div>
-      <!-- quantity -->
-      <!---->
-
       <div class="sm:flex sm:justify-center sm:items-center">
         <div class="flex justify-end  ">
-
-          <button class="border border-orange-400 flex text-orange-500 px-4  py-2 ml-2 items-center justify-center sm:w-20">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z" />
+          <button
+            (click)="show(product)"
+            class="border border-orange-400 flex text-orange-500 px-4  py-2 ml-2 items-center justify-center sm:w-20">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="1.5"
+                 viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"
+                stroke-linecap="round"
+                stroke-linejoin="round"/>
             </svg>
           </button>
-
-          <button class="border border-orange-400 flex text-orange-500 px-4  py-2 ml-2 items-center justify-center sm:w-20">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round" d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0" />
+          <button
+            (click)="deleteProduct(product)"
+            class="border border-orange-400  text-orange-500 px-4  py-2 ml-2">
+            <svg class="w-6 h-6" fill="none" stroke="currentColor" stroke-width="1.5"
+                 viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <path
+                d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"
+                stroke-linecap="round"
+                stroke-linejoin="round"/>
             </svg>
           </button>
-
-
         </div>
       </div>
-      <!---->
+    </div>
 
+
+    <div *ngIf="showModal">
+      <div class="fixed inset-0 flex items-center justify-center">
+        <div class="absolute inset-0 bg-gray-300 opacity-75"></div>
+        <div class="bg-white p-8 rounded-lg z-10">
+          <div class="flex justify-end">
+            <button (click)="hide()">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                   stroke="currentColor" class="w-6 h-6">
+                <path stroke-linecap="round" stroke-linejoin="round" d="M6 18L18 6M6 6l12 12"/>
+              </svg>
+
+            </button>
+          </div>
+          <div class="flex items-center flex-col p-8">
+            <!--detail-->
+            <div class="mb-3">
+              <p>product name : <span class=" font-bold">{{product.name}}</span></p>
+              <p>product price : <span class=" font-bold">{{product.price}}</span></p>
+              <p>total price : <span class=" font-bold">{{product.price * psc  }}</span></p>
+
+            </div>
+            <!--sizes-->
+            <div class="flex gap-2 mb-3">
+              <div *ngFor="let size of product.sizes">
+                <label [for]="'size-' + size + '-' + product.id" class="inline-flex items-center ">
+                  <!--i have a problem in here and i fixed it with this [for] that i added the product id with the name -->
+                  <input
+                    [value]="size"
+                    type="radio"
+                    [id]="'size-' + size + '-' + product.id"
+                    [name]="'options-' + product.id"
+                    (click)="selectSize(size)"
+                    [checked]="size === defaultSize"
+                    class="hidden"/>
+                  <div
+                    [ngClass]="{'bg-orange-500': (size === defaultSize) , 'text-white': ( size === defaultSize )}"
+
+                    class="border border-orange-500 text-orange-500  py-0 px-2 rounded active:bg-orange-500 active:text-white">
+                    {{size}}
+                  </div>
+                </label>
+              </div>
+            </div>
+            <!--psc-->
+            <div class="sm:flex sm:justify-center sm:items-center">
+              <div class="flex justify-between  ">
+                <div class="border border-orange-400  px-2 space-x-4 py-1 flex items-center justify-between  ">
+                  <button (click)="dec() " class="text-orange-500">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5"/>
+                    </svg>
+                  </button>
+                  <p>{{psc}}</p>
+                  <button (click)="inc()" class="text-orange-500">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                         stroke="currentColor" class="w-6 h-6">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M4.5 15.75l7.5-7.5 7.5 7.5"/>
+                    </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <!--button-->
+            <button
+              (click)="addAndHide( )"
+              class="bg-orange-500 text-white rounded-md py-2 px-4 mt-4">
+              add
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
