--- a/src/app/cart/favorate-detail/favorate-detail.component.html
+++ b/src/app/cart/favorate-detail/favorate-detail.component.html
@@ -2,45 +2,14 @@
   <div class="w-full ">
 
     <div class="border-2 p-2">
-      <div class="flex justify-between items-center pt-4">
+      <div class="flex items-center justify-center p-2">
 
-        <!-- select all radio-->
-        <div class="flex justify-start">
-          <div class="w-6 h-6 flex flex-col justify-center items-center ">
-            <input type="checkbox" class="hidden" id="myCheckbox">
-            <label for="myCheckbox" class="w-5 h-5 bg-white rounded-md border border-black"></label>
-          </div>
-          <p class="pl-4">select all</p>
-        </div>
-        <!--    remove button-->
-        <div class="flex justify-end mr-4 sm:mr-40  ">
-
-          <button
-            class="border border-orange-400 flex text-orange-500 px-4  py-2 ml-2 items-center justify-center sm:w-20">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                 stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M15.75 10.5V6a3.75 3.75 0 10-7.5 0v4.5m11.356-1.993l1.263 12c.07.665-.45 1.243-1.119 1.243H4.25a1.125 1.125 0 01-1.12-1.243l1.264-12A1.125 1.125 0 015.513 7.5h12.974c.576 0 1.059.435 1.119 1.007zM8.625 10.5a.375.375 0 11-.75 0 .375.375 0 01.75 0zm7.5 0a.375.375 0 11-.75 0 .375.375 0 01.75 0z"/>
-            </svg>
-          </button>
-
-          <button
-            class="border border-orange-400 flex text-orange-500 px-4  py-2 ml-2 items-center justify-center sm:w-20">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                 stroke="currentColor" class="w-6 h-6">
-              <path stroke-linecap="round" stroke-linejoin="round"
-                    d="M14.74 9l-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 01-2.244 2.077H8.084a2.25 2.25 0 01-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 00-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 013.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 00-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 00-7.5 0"/>
-            </svg>
-          </button>
-
-
-        </div>
-
+        <p class="text-3xl text-center">all you favorite product is here </p>
       </div>
       <div class="mt-10">
-        <app-favorate-card></app-favorate-card>
-        <app-favorate-card></app-favorate-card>
-
+        <div *ngFor="let pro of favorateProducts">
+          <app-favorate-card [product]=pro></app-favorate-card>
+        </div>
       </div>
     </div>
   </div>
