--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -42,17 +42,22 @@
     </div>
 
     <!--  product jobs-->
-    <div class="flex justify-between items-center">
-      <button (click)="show(product)" class="bg-orange-500 text-white rounded-md py-2 px-4">Add To Cart</button>
-      <div class="h-8 w-8 rounded-full bg-orange-500 flex justify-center items-center text-white">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-             class="w-6 h-6">
-          <path stroke-linecap="round" stroke-linejoin="round"
-                d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"/>
-        </svg>
-      </div>
-    </div>
+    <div class="flex justify-between">
+      <div class="flex justify-between items-center">
+        <button (click)="show(product)" class="bg-orange-500 text-white rounded-md py-2 px-4">Add To Cart</button>
 
+      </div>
+      <button (click)="addToFavorate(product)">
+        <div class="h-8 w-8 rounded-full bg-orange-500 flex justify-center items-center text-white">
+          <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+               stroke="currentColor"
+               class="w-6 h-6">
+            <path stroke-linecap="round" stroke-linejoin="round"
+                  d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z"/>
+          </svg>
+        </div>
+      </button>
+    </div>
 
     <div *ngIf="showModal">
       <div class="fixed inset-0 flex items-center justify-center">
